Add register page & update index (login) page
Add basic register page for users to register a new account (WIP, many things needed to be added). Update index (login) page with some new HTML text and a link to take the user to the register page

--- a/register.html
+++ b/register.html
@@ -1,10 +1,8 @@
-<!-- This is the index file that's in /var/www/html/  
-	 Editing this file appears to correctly change the website's
-	 appearance so it seems to be in the correct filepath. -->
+<!-- Page where new account registration takes place (WIP) -->
 
 <html>
 <head>
-	<title>AngryRedAngler</title>
+	<title>Register New Account</title>
 	<script type="text/javascript" src="js/md5.js"></script>
 	<script type="text/javascript" src="js/code.js"></script>
     <link href="css/styles.css" rel="stylesheet">	
@@ -12,16 +10,17 @@
 </head>
 <body>
 
-<h1 id="title">Contact Manager</h1>
+<h1 id="title">Registration Page</h1>
 
 <div id="loginDiv">
-	<span id="inner-title">PLEASE LOG IN</span>
+	<span id="inner-title">Please enter your desired username and password (WIP)</span>
 	<input type="text" id="loginName" placeholder="Username" /><br />
 	<input type="password" id="loginPassword" placeholder="Password"/><br />
 	<button type="button" id="loginButton" class="buttons" onclick="doLogin();"> Do It </button>
 	<span id="loginResult"></span>
-	<a href="register.html">Don't have an account? Register here!</a>
+	<a href="index.html">Home (login page)</a>
 </div>
 
 </body>
+
 </html>
