--- a/color.html
+++ b/color.html
@@ -5,7 +5,7 @@
 <head>
 	<title>Contact Manager (WIP)</title>
 	<script type="text/javascript" src="js/code.js"></script>
-	<script src="jquery-3.5.1.min.js"></script>					<!-- jQuery code-->
+	<script src="jquery-3.5.1.js"></script>						<!-- jQuery code-->
     <link href="css/styles.css" rel="stylesheet">	
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	
