--- a/register.html
+++ b/register.html
@@ -7,7 +7,7 @@
 	<title>Register New Account</title>	<!-- this is the page title that shows up in the browser tab-->
 	<script type="text/javascript" src="js/md5.js"></script> 	<!-- password hash code-->
 	<script type="text/javascript" src="js/code.js"></script>	<!-- main javascript code-->
-	<script src="jquery-3.5.1.min.js"></script>					<!-- jQuery code-->
+	<script src="jquery-3.5.1.js"></script>						<!-- jQuery code-->
     <link href="css/styles.css" rel="stylesheet">				<!-- CSS styling sheet-->
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">	<!-- font reference-->
 </head>
