Add Register Page Name Fields, minor CSS edit

--- a/register.html
+++ b/register.html
@@ -19,8 +19,12 @@
 <!-- Register Section TODO: convert all references to login to register,
 	implement actual registration behavior the HTML is responsible for-->
 <div id="registerDiv">
-	<!-- Register prompt text-->
-	<span id="inner-title">Please enter your desired username and password (WIP)</span>
+	<!-- Register prompt text: firstName, lastName-->
+	<span id="inner-title">Please enter your first name and last name</span>
+	<input type="text" id="firstName" placeholder="First Name" /><br />	<!-- firstName input field-->
+	<input type="text" id="lastName" placeholder="Last Name" /><br />	<!-- password input field-->
+	<!-- Register prompt text: Username, Password-->
+	<span id="inner-title">Please enter your desired username and password</span>
 	<input type="text" id="loginName" placeholder="Username" /><br />	<!-- username input field-->
 	<input type="password" id="loginPassword" placeholder="Password"/><br />	<!-- password input field-->
 
