Add Registration Functionality in Front End

--- a/register.html
+++ b/register.html
@@ -14,7 +14,7 @@
 
 <!-- The body section is where the main content of your page goes (similar to a program's main() section)-->
 <body>
-<h1 id="title">Registration Page</h1>		<!-- Header 1 title text-->
+<h1 id="title">Registration Page (WIP)</h1>		<!-- Header 1 title text-->
 
 <!-- Register Section TODO: convert all references to login to register,
 	implement actual registration behavior the HTML is responsible for-->
@@ -30,7 +30,7 @@
 
 	<!-- submit button, calls -->
 	<button type="button" id="registerButton" class="buttons" onclick="doRegister();"> Submit </button>
-	<span id="registerResult"></span> <!-- register result message display element, only displays error messages-->
+	<span id="registerResult"></span> <!-- register result message display element-->
 
 	<!-- link to home page (index.html) for when the user doesn't registering a new account
 		and wants to return to the log in page -->
