--- a/register.html
+++ b/register.html
@@ -1,9 +1,15 @@
+<!DOCTYPE html>
 <!-- Page where new account registration takes place (WIP) -->
 
 <html>
 <!-- The header section is where you reference all the other code files you
 	will be using on this page. -->
-<head>
+<head lang="en">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 	<title>Register New Account</title>	<!-- this is the page title that shows up in the browser tab-->
 	<script type="text/javascript" src="js/md5.js"></script> 	<!-- password hash code-->
 	<script type="text/javascript" src="js/code.js"></script>	<!-- main javascript code-->
@@ -34,7 +40,9 @@
 
 	<!-- link to home page (index.html) for when the user doesn't registering a new account
 		and wants to return to the log in page -->
-	<a href="index.html">Home (login page)</a>	<!-- OPTION: button vs. link?-->
+  <div class="container">
+	  <a href="index.html">Home (login page)</a>	<!-- OPTION: button vs. link?-->
+  </div>
 </div>
 
 </body>
