--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                         <form>
                             <div class="form-group">
                                 <label class="form-control-label">USERNAME</label>
-                                <input type="text" class="form-control">
+                                <input type="text" id="loginName" class="form-control">
                             </div>
                             <div class="form-group">
                                 <label class="form-control-label">PASSWORD</label>
-                                <input type="password" class="form-control" i>
+                                <input type="password" id="loginPassword" class="form-control" i>
                             </div>
 
                             <div class="col-lg-12 loginbttm">
@@ -63,8 +63,9 @@
                                     <!-- Error Message -->
                                 </div>
                                 <div class="col-lg-6 login-btm login-button">
-                                    <button type="submit" class="btn btn-outline-primary">LOGIN</button>
+                                    <button type="submit" id="loginButton" class="btn btn-outline-primary" onclick="doLogin();">LOGIN</button>
                                 </div>
+								<a href="register.html">Registration Page!</a>
                             </div>
                         </form>
                     </div>
