--- a/register.html
+++ b/register.html
@@ -94,6 +94,9 @@
 				<div class="col-lg-3 col-md-2"></div>
 			</div>
 		</div>
+		<!-- Redirection to index.html -->
+		<p></p>
+		<a href="index.html">Already have an account? Click here!</a>
 	</div>
 
 	<footer>
