Added Login Result to index.php

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                                 <div class="col-lg-6 login-btm login-button">
                                     <button type="button" id="loginButton" class="btn btn-outline-primary" onclick="doLogin();">LOGIN</button>
                                 </div>
+								<div>
+									<span id="loginResult"></span> <!-- login result message display element, only displays error messages-->
+								</div>
 								<a href="register.html">Don't have an account? Click here!</a>
                             </div>
                         </form>
