creating code.js functions for update and delete

--- a/contactManager.html
+++ b/contactManager.html
@@ -56,6 +56,18 @@
 	</div>
 	<br /><br /><br />
 
+	<!-- Delete Contact Section-->
+	<div id="deleteContactUI">
+		<span id="deleteContactTitle">Delete Contact Function (WIP, untested until Search Contacts works)</span>
+		<input type="text" id="contactFirstName" placeholder="First Name" /><br />
+		<input type="text" id="contactLastName" placeholder="Last Name" /><br />
+		<input type="text" id="contactPhone" placeholder="Phone" /><br />
+		<input type="text" id="contactEmail" placeholder="Email" /><br />
+		<!-- Submission button to trigger Add Contact function-->
+		<button type="button" id="deleteContactButton" class="buttons" onclick="doDeleteContact();"> Delete Contact </button>
+	</div>
+	<br /><br /><br />
+
 	<!-- Search Contacts Section-->
 	<div id="searchContactsUI">
 		<span id="searchContactsTitle">Search Contacts Function (WIP)</span>
