--- a/contactManager.html
+++ b/contactManager.html
@@ -108,6 +108,7 @@
 														<label for="updateEmail" class="form-control-label">Email</label>
 														<input type="text" id="updateEmail" class="form-control" placeholder="Enter Email Address" /><br />
 														<span id="updateContactId" hidden="true"></span>
+														<span id="updateContactEntryNumber" hidden="true"></span>
 													</div>
 													<div class="modal-footer">
 														<button type="button" class="btn btn-default" onclick="doUpdateContact();">Update (WIP)</button>
