--- a/contactManager.html
+++ b/contactManager.html
@@ -72,6 +72,9 @@
 										</div>
 										<!-- Submission button to trigger Add Contact function-->
 										<button type="button" id="addContactButton" class="btn btn-outline-primary" onclick="doAddContact();"> Add Contact </button>
+										<div> 
+											<span id="addResult"></span> <!-- To display success (or error) message for adding a contact -->
+										</div>
 									</div>
 								
 									<div class="col-lg-12 contact-manager-title"><h3 id="title">Search Contacts</h3></div>
