--- a/contactManager.html
+++ b/contactManager.html
@@ -8,13 +8,14 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-		<title>Contact Manager (WIP)</title>
+		<title>Contact Manager</title>
 		<script type="text/javascript" src="js/code.js"></script>
 		<!--
 		<script src="jquery-3.5.1.js"></script>						 jQuery code-->
 		<link href="css/styles.css" rel="stylesheet">	
 		<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 		
+        <!-- Login Credential Checker - uses cookies to check if user is no longer logged in, which kickes them back to index.html -->
 		<script type="text/javascript">
 		document.addEventListener('DOMContentLoaded', function() 
 		{
